[tool.poetry]
name = "aws-lambda-idempotency"
version = "0.1.0"
description = ""
authors = ["markkvdb <github@mvanderbroek.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aws-lambda-powertools = "^2.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
